--- a/.github/workflows/project.yml
+++ b/.github/workflows/project.yml
@@ -7,6 +7,8 @@ env:
 jobs:
   Build-Arches:
     runs-on: [self-hosted]
+    permissions:
+      packages: write
     outputs:
       image: ${{ steps.extract_image_name.outputs.image_name }}
     steps:
